syntax = "proto3";


enum SeasonDev1ClanCardDefs {
  SeasonDev1ClanCard_NotSet = 0;
  SeasonDev1ClanOfAttack   = 1;
  SeasonDev1ClanOfDefense  = 2;
  SeasonDev1ClanOfMagic    = 3;
}

enum SeasonDev1TotemDefs {
  SeasonDev1Totem_NotSet  = 0;
  SeasonDev1Totem_Attack  = 1;
  SeasonDev1Totem_Defense = 2;
  SeasonDev1Totem_Magic   = 3;
}

enum SeasonDev1MonumentCardDefs {
  SeasonDev1MonumentCard_NotSet         = 0;
  
  SeasonDev1MonumentOfAttack            = 1;
  SeasonDev1MonumentOfDefense           = 2;
  SeasonDev1MonumentOfMagic             = 3;
  
  SeasonDev1MonumentOfAttackAndDefense  = 4;
  SeasonDev1MonumentOfAttackAndMagic    = 5;
  SeasonDev1MonumentOfDefenseAndMagic   = 6;

  SeasonDev1Monument_OptPlayerWins = 7;
  SeasonDev1Monument_OsbPlayerWins = 8;
  SeasonDev1Monument_BothPlayersLose = 9;
  SeasonDev1Monument_BothPlayersWin = 10;
  SeasonDev1Monument_ForcedDraw = 11;
}
